various fixes, alignments, and amendments (best commit message ever)

--- a/juniorguru/web/static/src/css/components/pricing.scss
+++ b/juniorguru/web/static/src/css/components/pricing.scss
@@ -1,5 +1,6 @@
-.pricing {
-  padding-top: ($whitespace-3 * 2);
+.pricing__heading {
+  margin-bottom: $whitespace-3;
+  text-align: center;
 }
 
 .pricing__plan {
